--- a/美团HD/Classes/Home(首页)/View/MTHomeTopItem.xib
+++ b/美团HD/Classes/Home(首页)/View/MTHomeTopItem.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
@@ -64,6 +65,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="iconButton" destination="uQA-M6-cFW" id="EJt-v1-irZ"/>
+                <outlet property="subtitleLabel" destination="mHF-wl-k0i" id="Kqp-NW-ajf"/>
+                <outlet property="titleLabel" destination="Fg6-kz-hap" id="Uld-iI-tm6"/>
             </connections>
             <point key="canvasLocation" x="255" y="257.5"/>
         </view>
